--- a/modules/i2b2/files/i2b2-1.7-install-procedures/config/config.properties
+++ b/modules/i2b2/files/i2b2-1.7-install-procedures/config/config.properties
@@ -1,7 +1,7 @@
 #=====================================================================================
 # This properties file represents configuration values which get copied into
 # other files (including other configuration files!) within the i2b2 install.
-# The utility used to do this is the ConfigMerger utility.
+# The utility used to do this is the ConfigMerger utility
 #
 # NOTES. 
 # (1) A cursory glance at the values of the settings will show there is a fair degree 
